syntax = "proto3";

package v1;

service CountService {
    rpc GetCount (GetCountRequest) returns (Count) {}
    rpc UpdateCount (UpdateCountRequest) returns (Count) {}
}

message Count {
    int64 value = 1;
}

message GetCountRequest {
    bool addDelay = 1;
    int32 errorRate = 2;
}

message UpdateCountRequest {
    int64 value = 1;
}
